pymfm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v3
  namespace: default
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # # type of authentication
    # # nginx.ingress.kubernetes.io/auth-type: basic
    # # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: ingress-basic-auth
    # # message to display with an appropriate context why the authentication is required
    # # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - this is a private API'
spec:
  # tls:
  #   - hosts:
  #     - sogno-linux.online
  #     secretName: letsencrypt-dsotp-api
  rules:
  - host: sogno-linux.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pymfm-api
            port: 
              number: 8000
